@@ -7,12 +7,10 @@ import javax.lang.model.util.ElementScanner14;
 public class MainGame{
 	Scanner sc = new Scanner(System.in);
 	Random R_Num = new Random();
-	Basic basic1 = new Basic();
+	Basic basic1 = new Basic(); 
 	Data data1 = new Data();
 	int actualNumber = R_Num.nextInt(10);
-	// String userInput;
-	int guess, nobal;
-	boolean answer = true;
+	int guess, nobal, i;
 	public void NumberGame(){
 		clear();
 		basic1.rules();
@@ -20,57 +18,42 @@ public class MainGame{
 		data1.accBalance();
 		data1.ifNegBalance();
 		data1.ifMoreBalance();
-		if (answer) {
-		    // loopGame();
-		    do{
-				clear();
-				basic1.welcome();
-				data1.yourBalance();
-				data1.amountToBet();
-				data1.ifGreaterAmount();
-				guessNumber();
-				ifSmallerGuess();
-				ifGreaterGuess();
-				displayNumber();
-				actualGame();
-				nobal = data1.ifNoBalance();
-				// nobal = data1.zeroBalance();
-				if(nobal == 1){
-					System.out.print("\nSee you Next Time!\n");
-					break;
-				}
-				boolean answer = askUserYN(); 
-				if (!answer) {
-					break;
-				}
-			}while(!answer);
-		}
-	}
-	public boolean askUserYN(){
-	    Scanner sc = new Scanner(System.in);
-	    String userInput;
-	    System.out.print("\n\nDo you want to continue?(Y or N): ");
-	    userInput = sc.nextLine();
-
-	    if (userInput.length() > 1) {
-	    	System.out.println("\nError: Enter a valid input!");
-	    } 
-	    else{
-			char ip = userInput.charAt(0);
-			if (ip == 'Y' || ip == 'y') {
-			    return true;
-			} 
-			else if (ip == 'N' || ip == 'n') {
-			  	return false;
-			} 
-			else{
-			    System.out.println("\nError: Enter a valid input!");
+		do{
+			clear();
+			basic1.welcome();
+			data1.yourBalance();
+			data1.amountToBet();
+			data1.ifGreaterAmount();
+			guessNumber();
+			ifSmallerGuess();
+			ifGreaterGuess();
+			displayNumber();
+			actualGame();
+			nobal = data1.ifNoBalance();
+			if(nobal == 1){
+				System.out.print("\n  See you Next Time!\n");
+				break;
 			}
+			accInput();
+		}while(i==1);
+	}
+	public void accInput(){
+		System.out.print("\n\n  -->Do you want to play again?\n  1.Yes\n  2.No\n  Enter (1/2) here : ");
+		i = sc.nextInt();
+		checkInput();
+	}
+	public void checkInput(){
+		if(i<1){
+			System.out.print("\n  Invalid Input!\n  Please, Enter Valid Input!");
+			accInput();
 		}
-		return false;
+		else if(i>2){
+			System.out.print("\n  Invalid Input!\n  Please, Enter Valid Input!");
+			accInput();
+		}
 	}
 	public void displayNumber(){
-		System.out.print("\nThe Winning Number was "+actualNumber);
+		System.out.print("\n  The Winning Number was "+actualNumber);
 	}
 	public void actualGame(){
 		if(guess==actualNumber){
@@ -83,89 +66,30 @@ public class MainGame{
 		}
 	}
 	public void guessNumber(){
-		System.out.print("\nGuess any Number between 1-10 : ");
+		System.out.print("\n  Guess any Number between 1-10 : ");
 		guess = sc.nextInt();
 		ifSmallerGuess();
 		ifGreaterGuess();
 	}
 	public void ifSmallerGuess(){
 		if(guess<0){
-			System.out.print("\nInvalid Guess!\nPlease,");
+			System.out.print("\n Invalid Guess!\n Please,");
 			guessNumber();
 		}
 	}
 	public void ifGreaterGuess(){
 		if(guess>10){
-			System.out.print("\nInvalid Guess!\nPlease,");
+			System.out.print("\n Invalid Guess!\n  Please,");
 			guessNumber();
 		}
 	}
 	public void clear(){
-    try{
-        if (System.getProperty("os.name").contains("Windows"))
-            new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
-        else
-            Runtime.getRuntime().exec("clear");
-    	} catch (IOException | InterruptedException ex) {}
+	    try{
+	        if (System.getProperty("os.name").contains("Windows"))
+	            new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+	        else
+	            Runtime.getRuntime().exec("clear");
+	    	} 
+	    catch (IOException | InterruptedException ex) {}
 	}
 }
-	// public void loopGame(){
-	// 	do{
-	// 			clear();
-	// 			basic1.welcome();
-		// while(true){
-			// do{
-				// clear();
-				// basic1.welcome();
-				// data1.yourBalance();
-				// data1.amountToBet();
-				// data1.ifGreaterAmount();
-				// guessNumber();
-				// ifSmallerGuess();
-				// ifGreaterGuess();
-				// displayNumber();
-				// actualGame();
-				// data1.ifNoBalance();
-			// }while(!answer);
-		// }
-	// 			data1.yourBalance();
-	// 			data1.amountToBet();
-	// 			data1.ifGreaterAmount();
-	// 			guessNumber();
-	// 			ifSmallerGuess();
-	// 			ifGreaterGuess();
-	// 			displayNumber();
-	// 			actualGame();
-	// 			data1.ifNoBalance();
-	// 			boolean answer = askUser();
-	// 		}while(!answer);
-	// }
-// public class MainGame{
-// 	public static void main(String[] args) {
-// 		Game g1 = new Game();
-// 		g1.NumberGame();
-// 	}
-// }
-// while (true){
-// do {
-// 				game.play(players);
-// 				validInput = false;
-// 				do {
-// 					System.out.print("Play again? (Y/N): ");
-// 					char selection = input.nextLine().charAt(0);
-// 					switch (selection) {
-// 						case 'Y': case 'y':
-// 							validInput = true;
-// 							playAgain = true;
-// 							break;
-// 						case 'N': case 'n':
-// 							validInput = true;
-// 							playAgain = false;
-// 							break;
-// 						default:
-// 							validInput = false;
-// 							System.out.println("Invalid selection.");
-// 					}
-// 				} while (!validInput);
-// 			} while (playAgain);
-// }
